fix caption und label für raphaeljs-beispiel

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -196,8 +196,8 @@ circle.attr("fill", "#f00");
 // Sets the stroke attribute of the circle to white
 circle.attr("stroke", "#fff");	
 	\end{minted}
-	\caption{KineticJS Beispiel}
-	\label{kineticjs_example}
+	\caption{RaphaelJS Beispiel}
+	\label{raphaeljs_example}
 \end{figure}
 \subsection{Beispiel}
 \subsection{Performance}
