ungültiges zeichen entfernt

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -190,7 +190,7 @@ RaphaelJS ist eine Abstraktions-Schicht für die SVG-API. Dabei wird ein \emph{W
 Wie im Beispiel zu sehen ist, muss man sich bei RaphaelJS an keiner Stelle mit Dingen wie HTML-Elementen oder SVG-Namespaces auseinandersetzen - RaphaelJS kapselt den Zugriff auf den DOM und bietet eine saubere, verständliche und leicht zu nutzende API an, für die die Programmier-Sprache nicht gewechselt werden muss. 
 \begin{figure}[h!]
 	\begin{minted}{javascript}
-// Creates canvas 320 × 200 at 10, 50
+// Creates canvas 320 x 200 at 10, 50
 var paper = Raphael(10, 50, 320, 200);
 
 // Creates circle at x = 50, y = 40, with radius 10
