webgl-performance abschnitt

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -161,13 +161,41 @@ In der Praxis macht es Sinn, ein anstrahierendes Framework zu nutzen, dass man s
 Im Vergleich zur Canvas-API muss hier also viel Vorarbeit geleistet werden, bevor Resultate zu sehen sind.
 \paragraph{Canvas/WebGL-Hybrid} Mit WebGL sind zwar viele Dinge möglich, allerdings bietet es nur eine Low-Level-API. Zum Beispiel ist in der WebGL-Spezifikation kein nativer Text-Renderer vorgesehen. Natürlich ist es möglich, sich selbst einen Shader für diesen Zweck zu schreiben, allerdings gibt es die viel einfachere Lösung, gebrauch von der High-Level-API des Canvas-Elements zu machen und den Text in einem versteckten HTML5-Canvas zu rendern. Der Inhalt dieses Canvas kann dann als Textur in den WebGL-Kontext eingebunden und genutzt werden. Dies kann zum Beispiel im Lade-Zyklus des Spiels einmalig durchgeführt werden. So hat man alle Funktionen von HTML5-Canvas zur Verfügung, kann aber trotzdem von der gewaltigen Performance von WebGL Gebrauch machen.
 \subsection{Frameworks}
-\subsubsection{Pixi.js} Anders als die bisher vorgestellten Frameworks ist Pixi.js nicht nur ein vereinfachender API-Wrapper für die Zeichen-Technologie selbst, sondern eine komplette Game-Engine. Daher sind auch Funktionen wie Kollisions-Erkennung, Multi-Plattform-Support (Mobile, PC), Multi-Touch, ein Asset-Loader und vieles mehr eingebaut. Dieser Abschnitt befasst sich aber hauptsächlich mit dem eingebauten Renderer.
+\subsubsection{Pixi.js} Anders als die bisher vorgestellten Frameworks ist Pixi.js nicht nur ein vereinfachender API-Wrapper für die Zeichen-Technologie selbst, sondern eine komplette Game-Engine, bei der zwar der Haupt-Augenmerk auf dem Renderer liegt, aber viele andere Funktionen wie Kollisions-Erkennung, Multi-Plattform-Support (Mobile, PC), Multi-Touch, ein Asset-Loader und vieles mehr eingebaut sind. Dieser Abschnitt befasst sich aber hauptsächlich mit dem eingebauten Renderer.
 \paragraph{Canvas-Fallback} Der Pixi.js-Renderer untersützt sowohl WebGL als auch Canvas; falls möglich, wird WebGL genutzt. So soll schlicht die Reichweite der pixi.js-Spiele erhöht werden, da viele Geräte in Umlauf zwar eine rudimentäre Canvas-Unterstützung, aber noch keinen Support für WebGL haben.
 \paragraph{Text-Rendering} Der oben erklärte Trick, die Canvas-API zu nutzen, um Text in Bitmap-Texturen für WebGL umzuwandeln, wird auch von pixi.js genutzt.
-\paragraph{Performance-Tricks} der Pixi.js-Renderer setzt viele Tricks ein, um die Zeichen-Performance möglichst hoch zu halten. Diese Tricks sind im Abschnitt Performance genauer erklärt.
+\paragraph{Beispiel}
+Da Pixi.js eine komplette Game-Engine ist, ist die API sehr abstrakt gehalten - man steuert \emph{Game-Objects} und Viewports, das wirkliche Zeichnen in das Browser-Fenster spielt eine untergeordnete Rolle. Zum ausbalancieren der Game-Ticks wird auch hier die Methode requestAnimationFrame genutzt.  Im folgenden Beispiel wird eine Pixi-Szene mit Renderer intialisiert und ein neues Objekt in die Szene gesetzt. Dieses Objekt wird dann bei jedem Game-Tick ein Stückchen weiter rotiert.
+\begin{figure}[h!]
+	\begin{minted}{javascript}
+var stage = new PIXI.Stage(0x66FF99);
+var renderer = PIXI.autoDetectRenderer(400, 300);
+document.body.appendChild(renderer.view);
+requestAnimFrame( animate );
+var texture = PIXI.Texture.fromImage("bunny.png");
+var bunny = new PIXI.Sprite(texture);
+bunny.anchor.x = bunny.anchor.y = 0.5;
+bunny.position.x = bunny.position.y = 150;
+stage.addChild(bunny);
+function animate() {
+    requestAnimFrame( animate );
+    bunny.rotation += 0.1;
+    renderer.render(stage);
+}
+    \end{minted}
+    \caption{pixi.js Beispiel}
+    \label{pixijs_example}
+\end{figure}
 \subsection{Beispiel}
-Da Pixi.js eine komplette Game-Engine ist, ist die API sehr abstrakt gehalten - man steuert \emph{Game-Objects} und Viewports, das wirkliche Zeichnen in das Browser-Fenster spielt eine untergeordnete Rolle. Zum ausbalancieren der Game-Ticks wird auch hier die Methode requestAnimationFrame genutzt.
 \subsection{Performance}
+Die Anzahl der darzustellenden Objekte mit WebGL übertrifft die der anderen Technologien um Weiten. Selbst mit einem Smartphone sind über 10.000 Objekte bei 30FPS möglich, bei einem Computer mit dedizierter Grafikkarte sogar über 80.000. Diese enormen Zahlen sind möglich, da bei WebGL keine Abstraktions-Schichten zwischen der Grafikkarte und den Javascript-Zeichenbefehlen liegen. Die Instruktionen werden direkt an die Grafikkarte durchgereicht und dort ausgeführt, was aufgrund der parallelen Verarbeitung extrem schnell geschieht. Natürlich sind die oben genannten Werte nur durch Optimierungen im Zusammenspiel zwischen Javascript und Grafikkarte möglich.
+\paragraph{Textur-Caching} Der im Kapitel Performance-Messung definierte Benchmark-Test setzt einige Vorraussetzungen, die weitreichende Optimierungen ermöglichen. Zum einen gibt es nur eine Pixelgrafik, also eine Textur, die in der Szene dargestellt wird, zum anderen verändern die Objekte zwar ihre Position, nicht jedoch ihre Anzahl oder Rotation. Dies ermöglicht es unter anderem, die Bitmap-Grafik für die Textur einmal in den Grafikspeicher zu laden und dann immer wieder aufzurufen. In einem echten Spiel, in dem viele verschiedene Grafiken benötigt werden, ist es gut möglich, dass selten genutzte Grafiken ab und zu aus dem Arbeitsspeicher der Grafikkarte verdrängt werden und dann neu aus dem Hauptspeicher geladen werden müssen, was einen Performance-Abbruch zur Folge hätte.
+Dadurch, dass die Anzahl der Objekte immer konstant bleibt, ist ein statischer Puffer für die Textur-Koordinaten völlig ausreichend - dieser muss zu Beginn einmal befüllt werden und kann dann im Grafikspeicher verbleiben.
+\paragraph{Effizienter Shader} Der Shader-Code wird für jeden Frame, den die Grafikkarte an den Bildschirm weitergibt, tausende Male aufgerufen. Zwar wird dieser in nativen Op-Code kompiliert und somit sehr effizient durchgeführt, dennoch ist es empfehlenswert, hier möglichst sparsam mit den Resourcen den Grafikkarte umzugehen und keine komplizierten Berechnungen durchzuführen. Im Benchmark-Test gibt es keine Rotation oder ähnliches, also müssen die Pixel-Koordinaten nur in Clipboard-Koordinaten von 0 bis 1 umgerechnet werden und rechenaufwändige Operationen wie Sinus werden gespart.
+\paragraph{Batch-Verarbeitung} Der Flaschenhals bei der Verwendung von WebGL ist die Datenübertragung aus dem JavaScript-Kontext in den Speicher der Grafikkarte. Daher lohnt es sich, die Koordinaten für das Zeichnen von gleichartigen Objekten alle gleichzeitig in den Grafikspeicher zu übertragen, um dann alle Objekte auf einmal zeichnen zu lassen, statt für jedes Objekt den Kontext zu wechseln; also die Koordinaten eines Objekts zu übertragen, das Objekt zeichnen lassen, und dann die Koordianten des nächsten Objekts zu übertragen. In der WebGL-Implementierung des Benchmark-Tests explodierte die Anzahl der gezeichneten Objekte bei 30FPS von knapp 4.000 auf über 80.000. Um die Performance-Vorteile von WebGL nutzen zu können, muss diese Optimierung also unbedingt ausgeführt werden, wie zum Beispiel im pixi.js-Framework.
+\paragraph{Dataflow} Bei der Optimierung von WebGL-Anwendungen ist es wichtig, zu verstehen, wie eine GPU arbeitet. Eine GPU verarbeitet einen Strom von Daten - am effizientesten ist es, diesen Strom so selten wie möglich zu unterbrechen oder zu verlangsamen. Zum Beispiel benötigt der Upload einer Textur in den Grafikspeicher einige Zeit. Wenn also direkt nach einem Textur-Upload ein Zeichenbefehl für diese Textur übetragen wird, blockiert die GPU, bis die Textur vollständig gelesen wird. Also sollten zuerst andere Zeichen-Operationen durchgeführt werden, bis die Textur vollständig geladen ist. Ein anderes Beispiel sind sogenannte \emph{Readbacks}, bei denen Daten von der GPU zurück in den JavaScript-Kontext geladen werden. Für diese Operation muss die JavaScript-Ausführung blockiert werden, bis die GPU die Daten geliefert hat. In dieser Zeit können keine Zeichen-Operationen von JavaScript and die Grafikkarte übermittelt werden und der Daten-Strom setzt aus. Daher sollten Readbacks soweit wie möglich vermieden werden.
+\paragraph{Ausblick} Da durch WebGL alle Fähigkeiten einer Grafikkarte in JavaScript offen gelegt werden, ist eine sehr genaue Steuerung und damit auch Optimierung des Zeichenprozesses möglich. Diese genau zu erklären, würde den Rahmen in dieser Ausarbeitung sprengen. Zusammenfassend lässt sich sagen, dass WebGL zwar kompliziert und die dahinterstehenden Konzepte umfangreich und schwierig zu verstehen sind, die Technologie selbst aber dadurch in Sachen Performance den anderen vorgestellten Technologien deutlich überlegen ist. 
+TODO: quote https://docs.google.com/presentation/d/12AGAUmElB0oOBgbEEBfhABkIMCL3CUX7kdAPLuwZ964
 \section{SVG}
 \subsection{Technologie}
 SVG (Scalable Vector Graphics) ist eine vom W3C entwickelte Spezifikation für eine XML-basierte Sprache zur Beschreibung von 2-dimensionalen Vektorgrafiken. Dabei handelt es sich um eine deklarative Beschreibung, das heißt, Interaktivität oder Animationen müssen von aussen gesteuert werden (zum Beispiel über JavaScript).
