--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -9,6 +9,7 @@
 %\usepackage{ucs}
 \usepackage{minted}
 \usepackage{color}
+\usepackage{float}
 
 \definecolor{mygreen}{rgb}{0,0.6,0}
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
@@ -56,8 +57,10 @@ Zur Performance-Messung der verschiedenen Technologien habe ich eine einfache Be
 	\inputminted{javascript}{assets/benchmark1.js}
 	\caption{Spiele-Logik und Physik}
 	\label{benchmark1}
+	\newpage
 \end{figure}
 Außerdem kann per Klick der Benchmark-Wert für alle Technologien nacheinander ermittelt werden. Diese Tests werden dann auf möglichst vielen verschiedenen Geräten und Browsern durchgeführt. So entsteht eine gute Übersicht, was eine Technologie leisten kann.
+\newpage
 \section{HTML5-Canvas}
 \subsection{Technologie}
 \paragraph{} Das Canvas-Element (englisch für Leinwand) und die entsprechende Javascript-API ist vom W3C spezifiziert und wird von allen großen Browser-Herstellern implementiert. Dadurch ist gesichert, dass ein Browser-Spiel, das das Canvas-Element zur Darstellung nutzt, in auch vielfältigen  Umgebungen korrekt funktioniert. Auch WebGL gehört zum Canvas-Standard, da das Canvas-Element verschiedene Kontexte unterstützt; dieses Kapitel behandelt jedoch ausschließlich den \glqq 2d\grqq-Kontext, der \glqq webgl\grqq-Kontext wird im Kapitel \emph{WebGL} behandelt.
@@ -91,7 +94,7 @@ TODO: quote wikipedia here
 \end{itemize}
 Damit ist es perfekt geeignet, um auch aufwendige 2D-Spiele darzustellen, die meistens aus Serien von Pixelgrafiken bestehen, die in schneller Folge eingeblendet werden (sogenannte \emph{Sprites}).
 \subsection{Unterstützung}
-\begin{figure}[h!]
+\begin{figure}[H]
 	\begin{center}
 		\includegraphics[width=\textwidth]{assets/canvas_support.png} 
 	\end{center}
@@ -129,7 +132,7 @@ Damit ist die EaselJS-Suite nicht nur ein Framework für das Arbeiten mit Canvas
 \subsection{Beispiel}
 Wie bereits erwähnt, ist die API von Canvas sehr schlicht und einfach zu erlernen. Dabei spielt sich alles im sogenannten Context-Objekt ab. Auf diesem können Methoden aufgerufen werden, um Bilder oder Linien auf  die Arbeitsfläche zu zeichnen. Um Animationen oder ähnliches zu realisieren, empfiehlt es sich, die Methode requestAnimation-Frame zu verwenden.
 \paragraph{requestAnimationFrame} Diese Methode bekommt als Parameter eine Funktion übergeben, die nach gewisser Zeit vom Browser aufgerufen wird. Üblicherweiße ruft diese Funktion rekursiv wieder requestAnimationFrame mit sich selbst als Parameter auf. Der Browser fungiert hier als Balancer und sorgt dafür, dass die Methode nicht öfter aufgerufen wird als nötig. So wird zum Beispiel die Framezahl pro Sekunde beschränkt und keine weiteren Aufrufe angefordert, wenn das Browser-Fenster nicht im Vordergrund ist. Um die Ablaufgeschwindigkeit des Spiels vom Verhalten der requestAnimationFrame-Methode zu entkoppeln, muss bei jedem Aufruf ermittelt werden, wie viel Zeit seit dem letzten Aufruf vergangen ist und zum Beispiel Bewegungs-Vektoren entsprechend angepasst werden.
-\begin{figure}[h!]
+\begin{figure}[H]
 	\inputminted{javascript}{assets/vanillacanvas_example.js}
 	\caption{Canvas-Beispiel}
 	\label{canvas_support2}
@@ -142,6 +145,7 @@ Mithilfe des oben erwähnten Benchmark-Tests wurden auf einem Desktop-Rechner 85
 \paragraph{Konfiguration des Zeichenautomaten nur ändern wenn nötig} Wie bereits im Kapitel \emph{API} vorgestellt, ist es möglich den Zeichenmodus einmal festzulegen und dann gleiche Zeichenoperationen durchzuführen. So ist es zum Beispiel deutlich performanter, erst alle gestrichelten Linien und dann alle durchgezogenen Linien in einer Szenerie zu zeichnen als immer abwechselnd, da so das Canvas-Element intern Optimierungen durchführen kann.
 \paragraph{Rechenaufwändige Effekte vermeiden} Built-In-Effekte wie weicher Schatten sind zwar sehr bequem zu verwenden, benötigen aber viel Rechenzeit. Am besten ist aus, auf solche Effekte ganz zu verzichten oder mit halb-transparenten Grafiken zu arbeiten.
 \paragraph{Ganzzahlige Koordinaten verwenden} Das Canvas-Element unterstützt zwar Subpixel-Rendering, allerdings sind diese sehr ineffizient, da die Farbe eines Pixels erst kompliziert berechnet werden muss. Verwendet man nur ganze Zahlen als Koordinaten besonders für Bilder, können die Pixel direkt eingefügt werden und es wird kostbare Ausführungszeit gespart.
+\newpage
 \section{WebGL}
 \subsection{Technologie}
 Genau wie HTML5-Canvas ist auch WebGL vom W3C spezifiziert und wird über den <canvas>-Tag ins Dokument eingebunden. Der Unterschied besteht darin, dass nicht das \emph{2d}-Kontext-Objekt, sonder das \emph{webgl}-Kontext-Objekt genutzt wird. Dieses stellt die (recht umfangreiche) API zur Verfügung, um mit WebGL zu arbeiten. Im Gegensatz zu Canvas, dessen API auf Schlichtheit und eine niedrige Lernkurve abzielt, bringt WebGL im Grunde die gesamte OpenGL-Bibliothek in den Browser. Dabei steht nicht eine schlanke API, sondern Performance im Vordergrund.
@@ -160,13 +164,15 @@ Genau wie HTML5-Canvas ist auch WebGL vom W3C spezifiziert und wird über den <c
 In der Praxis macht es Sinn, ein anstrahierendes Framework zu nutzen, dass man sich nicht mehr direkt mit der sperrigen WebGL-API auseinandersetzen muss. Allerdings sind dann auch keine Low-Level-Optimierungen möglich, die das Programm teilweise dramatisch beschleunigen können.
 Im Vergleich zur Canvas-API muss hier also viel Vorarbeit geleistet werden, bevor Resultate zu sehen sind.
 \paragraph{Canvas/WebGL-Hybrid} Mit WebGL sind zwar viele Dinge möglich, allerdings bietet es nur eine Low-Level-API. Zum Beispiel ist in der WebGL-Spezifikation kein nativer Text-Renderer vorgesehen. Natürlich ist es möglich, sich selbst einen Shader für diesen Zweck zu schreiben, allerdings gibt es die viel einfachere Lösung, gebrauch von der High-Level-API des Canvas-Elements zu machen und den Text in einem versteckten HTML5-Canvas zu rendern. Der Inhalt dieses Canvas kann dann als Textur in den WebGL-Kontext eingebunden und genutzt werden. Dies kann zum Beispiel im Lade-Zyklus des Spiels einmalig durchgeführt werden. So hat man alle Funktionen von HTML5-Canvas zur Verfügung, kann aber trotzdem von der gewaltigen Performance von WebGL Gebrauch machen.
+\paragraph{Rechteck-Koordianten} Um zum Beispiel ein Rechteck zu zeichnen, muss beachtet werden, dass die Koordinaten in WebGL nicht Pixeln entsprechen; es werden sogenannte Clipspace-Koordianten verwendet. Dabei ist die linke untere Ecke der Zeichenfläche immer -1 -1 und die rechte obere Ecke immer 1 1. In realen Anwendungen übernimmt die Umrechnung von Pixel- in Clipspace-Koordianten meist der Shader selbst - er benötigt dafür lediglich die Größe der Zeichenfläche in Pixeln. Die andere Besonderheit ist, dass nicht nur 4 Vertizes übergeben werden, wie man für ein Rechteck annehmen würde, sondern 6. Das liegt daran, dass in WebGL immer Dreiecke gezeichnet werden, daher müssen 2 Punkte doppelt definiert werden. Außer dem Zeichenmodus Dreiecke gibt es noch Spezialfälle, bei denen Vertizes eingespart werden können, diese würden jedoch diesen Rahmen sprengen.
+\newpage
 \subsection{Frameworks}
 \subsubsection{Pixi.js} Anders als die bisher vorgestellten Frameworks ist Pixi.js nicht nur ein vereinfachender API-Wrapper für die Zeichen-Technologie selbst, sondern eine komplette Game-Engine, bei der zwar der Haupt-Augenmerk auf dem Renderer liegt, aber viele andere Funktionen wie Kollisions-Erkennung, Multi-Plattform-Support (Mobile, PC), Multi-Touch, ein Asset-Loader und vieles mehr eingebaut sind. Dieser Abschnitt befasst sich aber hauptsächlich mit dem eingebauten Renderer.
 \paragraph{Canvas-Fallback} Der Pixi.js-Renderer untersützt sowohl WebGL als auch Canvas; falls möglich, wird WebGL genutzt. So soll schlicht die Reichweite der pixi.js-Spiele erhöht werden, da viele Geräte in Umlauf zwar eine rudimentäre Canvas-Unterstützung, aber noch keinen Support für WebGL haben.
 \paragraph{Text-Rendering} Der oben erklärte Trick, die Canvas-API zu nutzen, um Text in Bitmap-Texturen für WebGL umzuwandeln, wird auch von pixi.js genutzt.
 \paragraph{Beispiel}
 Da Pixi.js eine komplette Game-Engine ist, ist die API sehr abstrakt gehalten - man steuert \emph{Game-Objects} und Viewports, das wirkliche Zeichnen in das Browser-Fenster spielt eine untergeordnete Rolle. Zum ausbalancieren der Game-Ticks wird auch hier die Methode requestAnimationFrame genutzt.  Im folgenden Beispiel wird eine Pixi-Szene mit Renderer intialisiert und ein neues Objekt in die Szene gesetzt. Dieses Objekt wird dann bei jedem Game-Tick ein Stückchen weiter rotiert.
-\begin{figure}[h!]
+\begin{figure}[H]
 	\begin{minted}{javascript}
 var stage = new PIXI.Stage(0x66FF99);
 var renderer = PIXI.autoDetectRenderer(400, 300);
@@ -186,16 +192,26 @@ function animate() {
     \caption{pixi.js Beispiel}
     \label{pixijs_example}
 \end{figure}
+\newpage
 \subsection{Beispiel}
+%http://www.html5rocks.com/en/tutorials/webgl/webgl_fundamentals/ zitieren
+Da die WebGL-API recht komplex ist, kann aufgrund des Umfangs nur ein kleines Beispiel gezeigt werden. Der folgende Code zeichnet ein grünes Rechteck über die gesamte Größe der Zeichenfläche. Dafür müssen die unten definierten Shader für Farbe und Position kompiliert und gelinkt werden, dann müssen die Koordinaten für das Rechteck dem Shader als \emph{Buffer} übergeben werden.
+\begin{figure}[H]
+	\inputminted{javascript}{assets/vanillawebgl_example.js}
+	\caption{WebGL-Beispiel}
+	\label{webgl_example}
+\end{figure}
+\newpage
 \subsection{Performance}
 Die Anzahl der darzustellenden Objekte mit WebGL übertrifft die der anderen Technologien um Weiten. Selbst mit einem Smartphone sind über 10.000 Objekte bei 30FPS möglich, bei einem Computer mit dedizierter Grafikkarte sogar über 80.000. Diese enormen Zahlen sind möglich, da bei WebGL keine Abstraktions-Schichten zwischen der Grafikkarte und den Javascript-Zeichenbefehlen liegen. Die Instruktionen werden direkt an die Grafikkarte durchgereicht und dort ausgeführt, was aufgrund der parallelen Verarbeitung extrem schnell geschieht. Natürlich sind die oben genannten Werte nur durch Optimierungen im Zusammenspiel zwischen Javascript und Grafikkarte möglich.
 \paragraph{Textur-Caching} Der im Kapitel Performance-Messung definierte Benchmark-Test setzt einige Vorraussetzungen, die weitreichende Optimierungen ermöglichen. Zum einen gibt es nur eine Pixelgrafik, also eine Textur, die in der Szene dargestellt wird, zum anderen verändern die Objekte zwar ihre Position, nicht jedoch ihre Anzahl oder Rotation. Dies ermöglicht es unter anderem, die Bitmap-Grafik für die Textur einmal in den Grafikspeicher zu laden und dann immer wieder aufzurufen. In einem echten Spiel, in dem viele verschiedene Grafiken benötigt werden, ist es gut möglich, dass selten genutzte Grafiken ab und zu aus dem Arbeitsspeicher der Grafikkarte verdrängt werden und dann neu aus dem Hauptspeicher geladen werden müssen, was einen Performance-Abbruch zur Folge hätte.
 Dadurch, dass die Anzahl der Objekte immer konstant bleibt, ist ein statischer Puffer für die Textur-Koordinaten völlig ausreichend - dieser muss zu Beginn einmal befüllt werden und kann dann im Grafikspeicher verbleiben.
-\paragraph{Effizienter Shader} Der Shader-Code wird für jeden Frame, den die Grafikkarte an den Bildschirm weitergibt, tausende Male aufgerufen. Zwar wird dieser in nativen Op-Code kompiliert und somit sehr effizient durchgeführt, dennoch ist es empfehlenswert, hier möglichst sparsam mit den Resourcen den Grafikkarte umzugehen und keine komplizierten Berechnungen durchzuführen. Im Benchmark-Test gibt es keine Rotation oder ähnliches, also müssen die Pixel-Koordinaten nur in Clipboard-Koordinaten von 0 bis 1 umgerechnet werden und rechenaufwändige Operationen wie Sinus werden gespart.
+\paragraph{Effizienter Shader} Der Shader-Code wird für jeden Frame, den die Grafikkarte an den Bildschirm weitergibt, tausende Male aufgerufen. Zwar wird dieser in nativen Op-Code kompiliert und somit sehr effizient durchgeführt, dennoch ist es empfehlenswert, hier möglichst sparsam mit den Resourcen den Grafikkarte umzugehen und keine komplizierten Berechnungen durchzuführen. Im Benchmark-Test gibt es keine Rotation oder ähnliches, also müssen die Pixel-Koordinaten nur in Clipspace-Koordinaten von -1 bis 1 umgerechnet werden und rechenaufwändige Operationen wie Sinus werden gespart.
 \paragraph{Batch-Verarbeitung} Der Flaschenhals bei der Verwendung von WebGL ist die Datenübertragung aus dem JavaScript-Kontext in den Speicher der Grafikkarte. Daher lohnt es sich, die Koordinaten für das Zeichnen von gleichartigen Objekten alle gleichzeitig in den Grafikspeicher zu übertragen, um dann alle Objekte auf einmal zeichnen zu lassen, statt für jedes Objekt den Kontext zu wechseln; also die Koordinaten eines Objekts zu übertragen, das Objekt zeichnen lassen, und dann die Koordianten des nächsten Objekts zu übertragen. In der WebGL-Implementierung des Benchmark-Tests explodierte die Anzahl der gezeichneten Objekte bei 30FPS von knapp 4.000 auf über 80.000. Um die Performance-Vorteile von WebGL nutzen zu können, muss diese Optimierung also unbedingt ausgeführt werden, wie zum Beispiel im pixi.js-Framework.
 \paragraph{Dataflow} Bei der Optimierung von WebGL-Anwendungen ist es wichtig, zu verstehen, wie eine GPU arbeitet. Eine GPU verarbeitet einen Strom von Daten - am effizientesten ist es, diesen Strom so selten wie möglich zu unterbrechen oder zu verlangsamen. Zum Beispiel benötigt der Upload einer Textur in den Grafikspeicher einige Zeit. Wenn also direkt nach einem Textur-Upload ein Zeichenbefehl für diese Textur übetragen wird, blockiert die GPU, bis die Textur vollständig gelesen wird. Also sollten zuerst andere Zeichen-Operationen durchgeführt werden, bis die Textur vollständig geladen ist. Ein anderes Beispiel sind sogenannte \emph{Readbacks}, bei denen Daten von der GPU zurück in den JavaScript-Kontext geladen werden. Für diese Operation muss die JavaScript-Ausführung blockiert werden, bis die GPU die Daten geliefert hat. In dieser Zeit können keine Zeichen-Operationen von JavaScript and die Grafikkarte übermittelt werden und der Daten-Strom setzt aus. Daher sollten Readbacks soweit wie möglich vermieden werden.
 \paragraph{Ausblick} Da durch WebGL alle Fähigkeiten einer Grafikkarte in JavaScript offen gelegt werden, ist eine sehr genaue Steuerung und damit auch Optimierung des Zeichenprozesses möglich. Diese genau zu erklären, würde den Rahmen in dieser Ausarbeitung sprengen. Zusammenfassend lässt sich sagen, dass WebGL zwar kompliziert und die dahinterstehenden Konzepte umfangreich und schwierig zu verstehen sind, die Technologie selbst aber dadurch in Sachen Performance den anderen vorgestellten Technologien deutlich überlegen ist. 
-TODO: quote https://docs.google.com/presentation/d/12AGAUmElB0oOBgbEEBfhABkIMCL3CUX7kdAPLuwZ964
+%TODO: quote https://docs.google.com/presentation/d/12AGAUmElB0oOBgbEEBfhABkIMCL3CUX7kdAPLuwZ964
+\newpage
 \section{SVG}
 \subsection{Technologie}
 SVG (Scalable Vector Graphics) ist eine vom W3C entwickelte Spezifikation für eine XML-basierte Sprache zur Beschreibung von 2-dimensionalen Vektorgrafiken. Dabei handelt es sich um eine deklarative Beschreibung, das heißt, Interaktivität oder Animationen müssen von aussen gesteuert werden (zum Beispiel über JavaScript).
@@ -216,7 +232,7 @@ RaphaelJS ist eine Abstraktions-Schicht für die SVG-API. Dabei wird ein \emph{W
 \paragraph{Verwendung} RaphaelJS wird genau wie SVG selbst meistens für Diagramme und ähnliche, statische Zwecke eingesetzt, es gibt aber auch ein auf RaphaelJS basierndes Browserspiel, dass die Technik erfolgreich einsetzt: https://github.com/petehamilton/gravitas
 \paragraph{Beispiel}
 Wie im Beispiel zu sehen ist, muss man sich bei RaphaelJS an keiner Stelle mit Dingen wie HTML-Elementen oder SVG-Namespaces auseinandersetzen - RaphaelJS kapselt den Zugriff auf den DOM und bietet eine saubere, verständliche und leicht zu nutzende API an, für die die Programmier-Sprache nicht gewechselt werden muss. 
-\begin{figure}[h!]
+\begin{figure}[H]
 	\begin{minted}{javascript}
 // Creates canvas 320 x 200 at 10, 50
 var paper = Raphael(10, 50, 320, 200);
@@ -239,7 +255,7 @@ circle.attr("stroke", "#fff");
 \subsection{Technologie}
 Eine andere Möglichkeit, HTML-Elemente zur Darstellung von Spiele-Objekten zu verwenden ist natürlich die Verwendung der Standard-HTML-Elemente in Verbindung mit CSS-Styling.
 \paragraph{Support} Der größte Vorteil bei dieser Herangehensweise ist natürlich der in jedem Browser verfügbare Support. Wenn man sich für das Spiel auf einfache Rastergrafiken beschränkt und auf Rotation und ähnliches verzichtet, ist sogar CSS1 ausreichend. Allerdings untersützen alle modernen Browser CSS3 - dadurch sind auch Dinge wie Rotationen, einfache Filter, 3D-Transformationen, Schatten und viele andere Dinge möglich. Abbildung \ref{css_transforms_support} zeigt die Browser-Unterstützung für CSS-Transforms. Dazu gehören Rotationen, Skalierungen und freie Matrix-Transformationen. 
-\begin{figure}[h!]
+\begin{figure}[H]
 	\begin{center}
 		\includegraphics[width=\textwidth]{assets/css_transforms_support.png} 
 	\end{center}
@@ -247,7 +263,7 @@ Eine andere Möglichkeit, HTML-Elemente zur Darstellung von Spiele-Objekten zu v
 	\label{css_transforms_support}
 \end{figure}
 \paragraph{Programmierung} Auch die Programmierung per JavaScript ist sehr einfach. Hier können genau wie bei SVG die APIs zur HTML-Element-Manipulation genutzt werden. Die Position eines Objektes zum Beispiel lässt sich folgendermaßen über die CSS-Attribute \emph{top} und \emph{left} steuern.
-\begin{figure}[h!]
+\begin{figure}[H]
 	\begin{minted}{javascript}
 //setze x-position
 imgEl.style.left = xPos + "px";
