--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -248,8 +248,17 @@ circle.attr("stroke", "#fff");
 	\caption{RaphaelJS Beispiel}
 	\label{raphaeljs_example}
 \end{figure}
+\newpage
 \subsection{Beispiel}
+Das Arbeiten mit SVG ist sehr einfach, es muss nur für jedes Objekt im Spiel ein SVG-Element angelegt und dem Zeichenflächen-Element angehängt werden. Um z.B. die Position zu verändern, müssen nur die entsprechenden Attribute im SVG-Element gesetzt werden, in diesem Fall \emph{x} und \emph{y}. Zu beachten ist, dass es sich hierbei um die naive Implementierung handelt, die nicht auf die erweiterten Animations-Möglichkeiten von SVG zurückgreift. Dies ist in realen Anwendung auch oft gar nicht möglich, da jetzt die Animation in einer Sekunde noch gar nicht bekannt ist.
+\begin{figure}[H]
+	\inputminted{javascript}{assets/vanillasvg_example.js}
+	\caption{SVG-Beispiel}
+	\label{svg_example}
+\end{figure}
 \subsection{Performance}
+%http://smus.com/canvas-vs-svg-performance/
+Im Benchmark-Test schaffte die SVG-Implementierung nur 500 Objekte, wo WebGL 80.000 bzw. Canvas 9.000 rendern konnte. Das macht klar, dass SVG ungeeignet ist für Spiele mit vielen Objekten, die ständig neu gezeichnet werden müssen. Dennoch gibt es Spiele wie das oben erwähnte Gravitas, die erfolgreich SVG zur Darstellung einsetzen. Das hat vor allem damit zu tun, dass es auch im Spiele-Umfeld Anwendungen gibt, bei denen nur wenige Objekte gleichzeitig dargestellt werden, bzw. bei denen nur selten Neu-Zeichnungen durchgeführt werden. Ausserhalb des Spiele-Usecases eignet sich SVG daher vor allem für Statistiken oder Karten-Darstellungen. Ein Performance-Gewinn in SVG-Spielen ist vor allem dadurch möglich, das Neu-Zeichnen der kompletten Fläche zu verhindern und den Szene-Graph wie auch die Transformations-Anweisungen so aufzubauen, dass Optimierungen angewendet werden können. Wie bereits erwähnt ist die sorgfältige Definition von gleichmäßigen Bewegungen z.B. in einem Spiel wie Super-Mario, in dem sich Bewegungsrichtung und -art von Objekten ständig innerhalb von Sekunden ändert, nicht möglich.
 \newpage
 \section{DOM}
 \subsection{Technologie}
@@ -276,9 +285,23 @@ imgEl.style.top = yPos + "px";
 \paragraph{CSS Hardware-Unterstützung} CSS3-Transformationen werden in vielen modernen Browsern mit \emph{Hardware-Unterstützung}, also mithilfe der Grafikkarte berechnet. Das beschleunigt rechenaufwändige Effekte wie Schatten oder 3D-Transformationen enorm.
 \paragraph{Interaktivität} Da Spiele-Objekte hier auch DOM-Elemente sind, ist es problemlos möglich, Events wie Klick oder Mouse-Over zu binden und für die Interaktivität im Spiel zu nutzen. Bei Canvas oder WebGL beispielweise muss selbst berechnet werden, wann und ob solche Ereignisse eintreten.
 \subsection{Frameworks}
+\subsubsection{Sprite.js}
+Das Framework  Sprite.js, das sich darauf spezialisiert hat, Sprites, also Animationen mit Einzelbildern für jeden Frame, in jedem Browser darzustellen, hat sowohl einen Renderer für Canvas, WebGL als auch DOM-Elemente. Das Augenmerk liegt hier vor allem an der Portabilität; die Darstellung von Sprites als DOM-Element beherrscht jeder Browser. Der Vorteil des Frameworks ist es, dass eine Abstraktions-Schicht gegeben ist, mit der sowohl DOM als auch WebGL und Canvas mit der selben, einfach zu erlernenden API gesteuert werden können.
+\paragraph{Verwendung} Verschiedene kleine Browsergames wie Steam oder Webbattle.js setzen Sprite.js ein, um die Spiele-Oberfläche zu rendern. Da viele Spiele als Umgebung Karten einsetzen, die aus Kacheln aufgebaut sind, hat Sprite.js dafür eine eigene Klasse, damit die Kachel-Objekte effizient berechnet und angezeigt werden können. Damit ist Sprite.js mehr als nur eine Abstraktions-Schicht für die verschiedenen Zeichen-Technologien, sondern bringt auch eigene Logik mit, mit der eigene Spiele schnell und einfach entwickelt werden können.
+%http://batiste.dosimple.ch/games/steam9/
+% https://github.com/tadast/webattle.js
 \subsection{Beispiel}
+Die Arbeit mit herkömmlichen DOM-Elementen gleicht dem Ansatz von SVG stark. Es ist sogar noch einfacher, die Elemente anzuzeigen, da auf Namespaces usw. verzichtet werden kann. Genau wie bei SVG wurde eine naive Implementierung verwendet, die einfach die Position der Spiele-Objekte bei jedem Game-Tick neu setzt, was in vielen realen Spiele-Anwendungen nötig sein würde.
+\begin{figure}[H]
+	\inputminted{javascript}{assets/vanilladom_example.js}
+	\caption{DOM-Beispiel}
+	\label{dom_example}
+\end{figure}
 \subsection{Performance}
-\subsection{Verwendung} Zusammenfassend lässt sich sagen, dass CSS-Spiele zwar sehr viele Gestaltungsmöglichkeiten mit sich bringt, es aber aufgrund der performance-technischen Beschränkungen der Arbeit mit dem DOM nicht möglich ist, viele separate Objekte darzustellen. Für einfache Spiele, die nur wenige Objekte gleichzeitig anzeigen, lohnt sich jedoch ein Blick auf diese Technik auf jeden Fall, da Abwärts-Kompatibilität gewährleistet und die Programmierung nicht sehr aufwendig ist.
+Die DOM-Implementierung schafft je nach Browser zwischen 450 und 500 Objekten, wenn Canvas 9.000 oder WebGL 80.000 schafft. Damit rangiert sie noch knapp unter der Performance von SVG und ist wie SVG selbst nicht geeignet, schnelle, interaktive Spiele darzustellen. Jedoch wurde auch hier genau wie bei SVG auf die Verwendung von CSS-Transitionen oder ähnliches verzichtet, was bei gleichförmigen Bewegungen auf jeden Fall einen Performance-Gewinn bringen kann.
+\paragraph{Verwendung} Zusammenfassend lässt sich sagen, dass CSS-Spiele zwar sehr viele Gestaltungsmöglichkeiten mit sich bringt, es aber aufgrund der performance-technischen Beschränkungen der Arbeit mit dem DOM nicht möglich ist, viele separate Objekte darzustellen. Für einfache Spiele, die nur wenige Objekte gleichzeitig anzeigen, lohnt sich jedoch ein Blick auf diese Technik auf jeden Fall, da Abwärts-Kompatibilität gewährleistet und die Programmierung nicht sehr aufwendig ist.
 \section{Fazit}
+Abschließend lässt sich sagen, dass alle hier vorgestellten Technologien Vor- und Nachteile haben, genauso wie Einsatzgebiete, in denen sie sehr gut verwendet werden können. SVG und DOM können mit sehr wenig Aufwand und einer schlichten API sehr schöne Grafiken und Animationen mit vielen und komplexen Effekten darstellen. Dafür sind diese Techologien nicht geeignet für schnelle Spiele, bei denen sich viele Objekte unvorhersehbar bewegen. Hier bieten sich Canvas oder WebGL an. Canvas hat eine stärkere Verbreitung als WebGL und eine einfache API mit einer flachen Lernkurve, die den Einstieg leicht macht. WebGL bietet dagegen die volle Komplexität von OpenGL, was den Einstieg schwierig macht. Dafür sind die Möglichkeiten nur durch die Hardware selbst begrenzt - bei ordentlicher Optimierung ist die Performance von WebGL unerreicht, wobei sich gefragt werden muss, ob dieser Vorteil schwerer wiegt als die Vorteile von Canvas; für viele Anwendungszwecke reicht die Performance von Canvas aus und man kann die größere Entwicklungsgeschwindigkeit nutzen. Welche Technologie eingesetzt werden soll, hängt stark vom Verwendungszweck ab; Canvas bietet jedoch einen guten Kompromiss aus beiden Welten; eine \emph{High Level API} für einfaches Arbeiten mit komplexen Effekten und trotzdem eine gute Performance, die für viele Anwendungszwecke ausreicht.
 \section{Ausblick}
+
 \end{document}
