--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -303,5 +303,7 @@ Die DOM-Implementierung schafft je nach Browser zwischen 450 und 500 Objekten, w
 \section{Fazit}
 Abschließend lässt sich sagen, dass alle hier vorgestellten Technologien Vor- und Nachteile haben, genauso wie Einsatzgebiete, in denen sie sehr gut verwendet werden können. SVG und DOM können mit sehr wenig Aufwand und einer schlichten API sehr schöne Grafiken und Animationen mit vielen und komplexen Effekten darstellen. Dafür sind diese Techologien nicht geeignet für schnelle Spiele, bei denen sich viele Objekte unvorhersehbar bewegen. Hier bieten sich Canvas oder WebGL an. Canvas hat eine stärkere Verbreitung als WebGL und eine einfache API mit einer flachen Lernkurve, die den Einstieg leicht macht. WebGL bietet dagegen die volle Komplexität von OpenGL, was den Einstieg schwierig macht. Dafür sind die Möglichkeiten nur durch die Hardware selbst begrenzt - bei ordentlicher Optimierung ist die Performance von WebGL unerreicht, wobei sich gefragt werden muss, ob dieser Vorteil schwerer wiegt als die Vorteile von Canvas; für viele Anwendungszwecke reicht die Performance von Canvas aus und man kann die größere Entwicklungsgeschwindigkeit nutzen. Welche Technologie eingesetzt werden soll, hängt stark vom Verwendungszweck ab; Canvas bietet jedoch einen guten Kompromiss aus beiden Welten; eine \emph{High Level API} für einfaches Arbeiten mit komplexen Effekten und trotzdem eine gute Performance, die für viele Anwendungszwecke ausreicht.
 \section{Ausblick}
+Web-Anwendungen, und damit auch Web-Spiele, sind hier und werden auch so schnell nicht wieder verschwinden. Daher ist es garantiert, dass die behandelten Technologien verbessert und weiterentwickelt werden. Vor allem WebGL wird aufgrund der Möglichkeiten, die sonst nur in nativen Anwendungen möglich sind, in Zukunft eine große Rolle spielen.
 
+Ein noch zu lösendes Problem für die Zukunft ist die weitere Verbesserung der Performance gegenüber nativen Anwendungen; WebGL ist immer noch deutlich langsamer als zum Beispiel C++-Programme. Zusätzlich gibt es immer noch Browser, die WebGL oder sogar Canvas noch nicht unterstützen; wahrscheinlich wird sich dieses Problem in den nächsten Jahren von selbst lösen.
 \end{document}
