browservergleich erweitert für canvas und webgl

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -148,7 +148,9 @@ Mithilfe des oben erwähnten Benchmark-Tests wurden auf einem Desktop-Rechner 85
 \paragraph{Rechenaufwändige Effekte vermeiden} Built-In-Effekte wie weicher Schatten sind zwar sehr bequem zu verwenden, benötigen aber viel Rechenzeit. Am besten ist aus, auf solche Effekte ganz zu verzichten oder mit halb-transparenten Grafiken zu arbeiten.
 \paragraph{Ganzzahlige Koordinaten verwenden} Das Canvas-Element unterstützt zwar Subpixel-Rendering, allerdings sind diese sehr ineffizient, da die Farbe eines Pixels erst kompliziert berechnet werden muss. Verwendet man nur ganze Zahlen als Koordinaten besonders für Bilder, können die Pixel direkt eingefügt werden und es wird kostbare Ausführungszeit gespart.
 \newpage
-\subsubsection{Browser-Vergleich} Beim Test des Canvas-Benchmarks in verschiedenen Browsern stach vor allem Firefox hervor. Leider konnte auch nach einiger Recherche kein wirklicher Grund für diese Performance gefunden werden; in der Vergangenheit kam es des öfteren bei verschiedenen Browsern zu massiven Performance-Einbrüchen nach dem Update auf eine bestimmte Version. Möglich, dass Chrome und der Internet-Explorer hier Konfigurations-Probleme haben.
+\subsubsection{Browser-Vergleich} Beim Test des Canvas-Benchmarks in verschiedenen Browsern stach vor allem Firefox hervor. Leider konnte auch nach Recherche kein wirklicher Grund für diese Performance gefunden werden; in der Vergangenheit kam es des öfteren bei verschiedenen Browsern zu massiven Performance-Einbrüchen nach dem Update auf eine bestimmte Version. Möglich, dass Chrome und der Internet-Explorer hier Konfigurations-Probleme haben oder die Grafik-Karte im Test nicht richtig unterstützen.
+Sowohl die großen Differenzen der Performance verschiedener Browser als auch der Fakt, dass die Performance nach bestimmten Updates plötzlich stark abnimmt und sich mit dem nächsten Update wieder normalisiert, ist es Zeichen dafür, dass die Technologie selbst, obwohl schon einige Jahre alt, noch nicht hunderprozentig stabil läuft. Die Browser-Hersteller sind immer noch am optimieren und verbessern der ihrer Implementierungen. Über die verschiedenen Versionen hinweg zeichnet sich jedoch ein deutlicher Trend nach oben ab.
+\paragraph{Kleine Stichprobe} Zu beachten ist ebenfalls, dass die im Benchmark verwendete Methode (Zeichnen eines Bildes) zwar in so gut wie jedem 2D-Spiel verwendet werden dürfte, aber höchstwahrscheinlich nicht so ausschließlich wie hier. In der Praxis können sich daher andere Flaschenhälse ergeben, die die Performance eines gewissen Spiels in einer gewissen Version eines gewissen Browsers beeinflussen, oder eventuelle Flaschenhälse im Benchmark-Beispiel werden umgangen. Durch diese Effekte kann sich das Verhältnis der Browser deutlich verschieben, trotzdem bietet der Benchmark eine gute Orientierung, da wie bereits erwähnt eine essentielle Funktion der API genutzt wird.
 %TODO: checken, ob chrome durch config schneller wird
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{assets/browser_comp_canvas} 
@@ -223,6 +225,8 @@ Dadurch, dass die Anzahl der Objekte immer konstant bleibt, ist ein statischer P
 %TODO: quote https://docs.google.com/presentation/d/12AGAUmElB0oOBgbEEBfhABkIMCL3CUX7kdAPLuwZ964
 \newpage
 \subsubsection{Browser-Vergleich} Beim Vergleich der 3 wichtigsten Browser fallen sowohl die sehr hohe Performance von Chrome als auch die recht schwache Performance des Internet-Explorer ins Auge. Das Problem in Internet-Explorer ist höchstwahrscheinlich eine fehlende Unterstützung der Grafikkarte - dadurch muss die Berechnung der Vertizes usw. in der CPU ablaufen und alle Vorteile von WebGL können nicht ausgespielt werden. Chrome hat hier eine deutlich bessere Anbindung an die Grafikkarte; dadurch kann die Berechnung hoch-parallelisiert ablaufen und eine sehr hohe Objekt-Zahl erreicht werden.
+%TODO: quote https://www.scirra.com/blog/125/internet-explorer-11-webgl-and-more
+\paragraph{Widersprüchliche Ergebnisse} In einem Benchmark-Test der Website scirra.com zeichnet sich ein ganz anderes Bild. Hier kann der Internet Explorer 11 deutlich mehr Objekte zeichnen als Chrome oder Firefox. Auch das weisst darauf hin, dass in meinem Test der Internet Explorer die große Rechenleistung der Grafikkarte aus unbekannten Gründen, höchstwahrscheinlich Treiberproblemen, nicht nutzen kann. Daraus wird ersichtlich, dass Benchmarks mit kleinen, dedizierten Beispielen auf nur wenigen Plattformen äußerst missverständlich sein können; es wird hier keine Aussage darüber getroffen, dass Internet Explorer eine schlechtere Performance liefert als Chrome, sondern dass durch viele Abstraktionsschichten zwischen Hardware und Software sehr große Differenzen auftreten können, auch wenn die theoretisch mögliche Performance identisch ist.
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{assets/browser_comp_webgl} 
 	\caption{Browser-Vergleich WebGL}
