--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -245,8 +245,8 @@ Wie im Beispiel \emph{SVG Namespace-Elemente} gut erkenntlich ist, macht es von 
 \paragraph{Animation mit JavaScript} Da, wie bereits erwähnt, die Animationen in Spielen hoch dynamisch sind und ständig angepasst werden müssen, ist die einfachste Methode, SVG-Grafiken mit JavaScript zu animieren, die ständige Anpassung der Transformations-Parameter der einzelnen Elemente (Position, Drehung, ...). Deklarative Ansätze wie CSS3-Keyframe-Animationen oder SMIL eigenen sich höchstens für sich monoton wiederholende Hintergründe, nicht aber für Echtzeit-Spiele. Auch hier kann die HTML5-Methode \emph{requestAnimationFrame} genutzt werden, um eine sinnvolle Anpassungsrate des SVG-Dokuments zu gewährleisten.
 \subsection{RaphaelJS}
 RaphaelJS ist eine Abstraktions-Schicht für die SVG-API. Dabei wird ein \emph{Wrapper} sowohl für die SVG-Zeichenfunktionen als auch für die HTML-Eventhandler geboten. Hinzu kommen viele Hilfsmethoden, die das Erstellen von komplexen Grafiken deutlich beschleunigen. Vor allem für die Erstellung von Animationen aller Art ist die JavaScript-API von RaphaelJS sehr praktisch, da die XML-Animations-Notation in SVG sehr umständlich und schlecht lesbar ist.
-\paragraph{Kompatibilität} Ein weiterer Vorteil von RaphaelJS ist die eingebaute Untersützung für ältere Browser; für frühere Versionen des Internet-Explorers wird ein Fallback auf \emph{VML} durchgeführt.
-\paragraph{Verwendung} RaphaelJS wird genau wie SVG selbst meistens für Diagramme und ähnliche, statische Zwecke eingesetzt, es gibt aber auch ein auf RaphaelJS basierndes Browserspiel, dass die Technik erfolgreich einsetzt: https://github.com/petehamilton/gravitas
+\paragraph{Kompatibilität} Ein weiterer Vorteil von RaphaelJS ist die eingebaute Unterstützung für ältere Browser; für frühere Versionen des Internet-Explorers wird ein Fallback auf \emph{VML} durchgeführt.
+\paragraph{Verwendung} RaphaelJS wird genau wie SVG selbst meistens für Diagramme und ähnliche, statische Zwecke eingesetzt, es gibt aber auch ein auf RaphaelJS basierendes Browserspiel, dass die Technik erfolgreich einsetzt: https://github.com/petehamilton/gravitas
 \paragraph{Beispiel}
 Wie im Beispiel zu sehen ist, muss man sich bei RaphaelJS an keiner Stelle mit Dingen wie HTML-Elementen oder SVG-Namespaces auseinandersetzen - RaphaelJS kapselt den Zugriff auf den DOM und bietet eine saubere, verständliche und leicht zu nutzende API an, für die die Programmier-Sprache nicht gewechselt werden muss. 
 \begin{figure}[H]
